# apigate

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  coverage.yml
apigate/: Cargo.toml
apigate-core/: Cargo.toml
apigate-core/src/: app.rs  backend.rs  balancing.rs  error.rs  hook.rs  lib.rs  map.rs  observability.rs  parts_ctx.rs  pipeline.rs  policy.rs  proxy.rs  route.rs  routing.rs
apigate-core/src/app/: build.rs  dispatch.rs  mod.rs  serve.rs  upstream.rs
apigate-core/src/balancing/: consistent_hash.rs  least_request.rs  least_time.rs  mod.rs  round_robin.rs
apigate-core/src/error/: apigate_error.rs  build.rs  core_runtime.rs  framework.rs  mod.rs  pipeline_runtime.rs
apigate-core/src/routing/: header_sticky.rs  mod.rs  no_route_key.rs  path_sticky.rs
apigate-macros/: Cargo.toml
apigate-macros/src/: codegen.rs  expand.rs  lib.rs  parse.rs  route.rs  service.rs  template.rs
apigate/examples/: README.md  basic.rs  demo.rs  errors.rs  hooks.rs  logging.rs  map.rs  multipart.rs  path.rs  policy.rs  runtime_tuning.rs  tower_logging.rs
apigate/examples/upstream/: Caddyfile
apigate/src/: lib.rs
apigate/tests/: e2e_errors.rs  e2e_observability.rs  e2e_pipeline.rs  e2e_policy.rs  e2e_proxy.rs  e2e_runtime_tuning.rs  macro_params.rs
apigate/tests/support/: mod.rs
apigate/tests/ui/fail/: ctx_not_mut.rs  ctx_not_mut.stderr  hook_not_async.rs  hook_not_async.stderr  map_borrows_local.rs  map_borrows_local.stderr  map_output_not_serialize.rs  map_output_not_serialize.stderr  map_raw_borrowed_slice.rs  map_raw_borrowed_slice.stderr  map_with_query.rs  map_with_query.stderr  map_without_data.rs  map_without_data.stderr  map_without_owned_input.rs  map_without_owned_input.stderr  raw_body_by_ref.rs  raw_body_by_ref.stderr  raw_body_in_hook.rs  raw_body_in_hook.stderr  route_outside_service.rs  route_outside_service.stderr  route_unknown_arg.rs  route_unknown_arg.stderr  scope_with_ref_param.rs  scope_with_ref_param.stderr
apigate/tests/ui/pass/: bare_special_generics.rs  hook_map_scope_params.rs  map_borrowed_output.rs  map_multipart_raw.rs  map_raw_body.rs  map_raw_output.rs  map_validate_only.rs  service_routes.rs
docs/: reference.md
