[package]
name = "apigate-core"
description = "Core runtime for apigate — routing, proxying, load balancing, and request context"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../README.md"
keywords = ["api-gateway", "proxy", "reverse-proxy", "load-balancing"]
categories = ["web-programming::http-server", "network-programming"]

[dependencies]
axum = { version = "0.8", features = ["tokio", "http1", "http2"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
hyper-util = { version = "0.1", features = ["tokio", "client", "client-legacy"] }
http = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
smallvec = "1"
thiserror = "2"
tracing = "0.1"
