[package]
name = "apigate-macros"
description = "Procedural macros for apigate: #[service], #[hook], #[map], and route attributes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../README.md"
keywords = ["api-gateway", "macros", "proc-macro"]
categories = ["web-programming::http-server"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
proc-macro-crate = "3"
thiserror = "2"
