[package]
name = "apigate"
version = "0.1.0"
edition = "2024"

[dependencies]
apigate-core = { path = "../apigate-core" }
apigate-macros = { path = "../apigate-macros" }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
