[package]
name = "apigate"
version = "0.1.0"
edition = "2024"

[dependencies]
apigate-core = { path = "../apigate-core" }
apigate-macros = { path = "../apigate-macros" }
axum = "0.8.8"
http = "1.4.0"
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
