[package]
name = "apigate"
description = "Macro-driven API gateway for Rust — declarative routing, request transformation, and reverse proxying built on axum"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../README.md"
keywords = ["api-gateway", "proxy", "reverse-proxy", "axum", "macros"]
categories = ["web-programming::http-server", "network-programming"]

[dependencies]
apigate-core = { path = "../apigate-core", version = "0.2.0" }
apigate-macros = { path = "../apigate-macros", version = "0.2.0" }
axum = "0.8.8"
http = "1.4.0"
serde_json = "1.0.149"
serde_urlencoded = "0.7.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
